# data-visualization-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/data_visualization_mcp_server/: __init__.py  example.py  server.py
src/data_visualization_mcp_server/tools/: __init__.py  data_sources.py  plotly_tools.py  seaborn_tools.py
tests/: __init__.py  test_basic.py
