[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-visualization-mcp-server"
version = "0.1.0"
description = "A FastMCP server for data visualization using Seaborn and Plotly"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Julio Aguilar", email = "julio.aguilar@live.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "seaborn>=0.13.2",
    "plotly>=6.3.0",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "matplotlib>=3.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/julio-aguilar/data-visualization-mcp-server"
Repository = "https://github.com/julio-aguilar/data-visualization-mcp-server"
Issues = "https://github.com/julio-aguilar/data-visualization-mcp-server/issues"

[project.scripts]
dataviz-mcp = "data_visualization_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_visualization_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true